--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@ wp-content/plugins/*
  
 # Ignore everything in the "themes" directory, except the themes you specify
 wp-content/themes/*
-# !wp-content/themes/sage/
+!wp-content/themes/sage/
