--- a/wp-content/themes/sage/bower.json
+++ b/wp-content/themes/sage/bower.json
@@ -8,9 +8,14 @@
   "private": true,
   "dependencies": {
     "modernizr": "2.8.2",
-    "bootstrap-sass-official": "3.3.5"
+    "bootstrap-sass-official": "3.3.5",
+    "fontawesome": "~4.4.0",
+    "slick-carousel": "~1.5.8"
   },
   "overrides": {
+    "slick-carousel": {
+      "main": "./slick/slick.min.js"
+    },
     "modernizr": {
       "main": "./modernizr.js"
     },
